tests/semantic_errors/negative_rect_size.draw
RECT(100, 140, -220, 90) COLOR blue WIDTH 3 FILL red;
